salesforce/force-app/main/default/objects/OpportunityLineItem/fields/Product_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_End_Date__c</fullName>
    <label>Product End Date</label>
    <description>Optional: Product-specific end date. If blank, uses Contract end date.</description>
    <type>Date</type>
</CustomField>