salesforce/force-app/main/default/objects/OpportunityLineItem/fields/Product_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_Start_Date__c</fullName>
    <label>Product Start Date</label>
    <description>Optional: Product-specific start date. If blank, uses Contract start date.</description>
    <type>Date</type>
</CustomField>