salesforce/force-app/main/default/objects/OpportunityLineItem/fields/Product_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Product_Term_Months__c</fullName>
    <label>Product Term (Months)</label>
    <description>Optional: Per-product deal term in months. When set along with Product Start Date, the Product End Date is auto-calculated. If blank, uses the opportunity-level deal term.</description>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>